Get all tasks, get task, add task api added
