# controllers/organization/site/task/getAllTask.controller.js
@@ -2,7 +2,7 @@ const TaskMember = require("@/models/organization/site/task/taskMember.model");
 const Task = require("@/models/organization/site/task/task.model");
 const Member = require("@/models/organization/member.model");
 
-const getAllTaskController = async (req, res) => {
+const GetAllTaskController = async (req, res) => {
     const { organization, site, floor } = req.query;
 
     try {
@@ -16,7 +16,7 @@ const getAllTaskController = async (req, res) => {
             const haveTaskIds = taskMembers.map(member => member.task);
 
             const tasks = await Task
-                .find({ _id: { $in: haveTaskIds } })
+                .find({ _id: { $in: haveTaskIds }, organization: organization, site: site, floor: floor })
                 .select("number work_category endDate startDate budget")
                 .sort({ createdAt: -1 })
                 .populate({
@@ -24,14 +24,14 @@ const getAllTaskController = async (req, res) => {
                     select: "name"
                 });
 
-            return res.status(200).json({ sites: tasks, success: true, error: "", message: "Tasks fetched successfully." });
+            return res.status(200).json({ tasks: tasks, success: true, error: "", message: "Tasks fetched successfully." });
         }
         else {
-            return res.status(409).json({ success: false, error: "You are not in this organization.", message: "" });
+            return res.status(409).json({ tasks: null, success: false, error: "You are not in this organization.", message: "" });
         }
     } catch (error) {
-        return res.status(500).json({ sites: null, success: false, error: `Error: ${error}`, message: "" });
+        return res.status(500).json({ tasks: null, success: false, error: `Error: ${error}`, message: "" });
     }
 }
 
-module.exports = getAllTaskController;
+module.exports = GetAllTaskController;
