# routes/organization/site/task/task.route.js
@@ -4,7 +4,9 @@ const siteMiddleware = require("@/utils/middleware/organization/siteMiddleware")
 const taskMiddleware = require("@/utils/middleware/organization/taskMiddleware");
 const organizationMiddleware = require("@/utils/middleware/organization/organizationMiddleware");
 
-const getAllTaskController = require("@/controllers/organization/site/task/getAllTask.controller");
+const GetAllTaskController = require("../../../../controllers/organization/site/task/getAllTask.controller");
+const GetTaskController = require("../../../../controllers/organization/site/task/getTask.controller");
+const AddTaskController = require("../../../../controllers/organization/site/task/addTask.controller");
 
 const router = express.Router();
 
@@ -16,7 +18,24 @@ router.get(
     Middleware,
     (req, res, next) => organizationMiddleware(req, res, next, key, "read", plan),
     siteMiddleware,
-    getAllTaskController
+    GetAllTaskController
+);
+
+router.get(
+    "/task",
+    Middleware,
+    (req, res, next) => organizationMiddleware(req, res, next, key, "read", plan),
+    siteMiddleware,
+    taskMiddleware,
+    GetTaskController
+);
+
+router.post(
+    "/task/add",
+    Middleware,
+    (req, res, next) => organizationMiddleware(req, res, next, key, "insert", plan),
+    siteMiddleware,
+    AddTaskController
 );
 
 module.exports = router;
